<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Book Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="shelf_mode">Bookshelf</string><string name="hello_world">Hello world!</string>
    
    <string name="book_mode">Single Book</string>
    <string name="begin_scanning">Select Scanning Mode</string>
    <string name="settings">Settings</string>
    <string name="please_scan_book">Scan a Book</string>
    <string name="please_scan_shelf">Scan a Shelf</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="neighbors">Neighbors:</string>
    <string name="shelf">Bookshelf:</string>
    <string name="last_book">Last Book Scanned</string>
    <string name="current_shelf">Current Shelf</string>

</resources>